<resources>
    <string name="app_name">KiraKiratter</string>
    <string name="app_website">http://kirakiratter.com</string>
    <string name="oauth_scheme">oauth2redirect</string>
    <string name="oauth_redirect_host">com.bl_lia.kirakiratter</string>

    <string name="hint_content_warning">Content warning</string>
    <string name="hint_content_body">What is on your mind?</string>
    <string name="label_content_warning">CW</string>
    <string name="label_not_safe_for_work">NSFW</string>
    <string name="button_katsu">KATSU!</string>
    <string name="error_message_5xx">Server connection error :(</string>

    <string name="push_notification_enabled">Push Notification Enabled</string>
    <string name="push_notification_disabled">Push Notification Disabled</string>
    <string name="notification_follow">%s followed you</string>
    <string name="notification_favourite">%s favourited your status</string>
    <string name="notification_boost">%s boosted your status</string>
    <string name="notification_mention">%s mentioned you</string>

    <string name="timeline_boosted">%s boosted</string>
    <string name="post_image_over_max">Maximum number of images is 4.</string>
    <string name="share_text">Share text…</string>
    <string name="copy_link">Copy link</string>

    <string name="image_saved">Image saved</string>

    <string name="visibility">public</string>
    <string name="visibility_public">public</string>
    <string name="visibility_unlisted">unlist</string>
    <string name="visibility_private">private</string>
    <string name="visibility_direct">direct</string>
</resources>
