<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

            <item
                android:id="@+id/menu_public"
                android:icon="@drawable/ic_public_black_24dp"
                android:title="@string/visibility_public"/>
            <item
                android:id="@+id/menu_unlisted"
                android:icon="@drawable/ic_lock_open_black_24dp"
                android:title="@string/visibility_unlisted"/>
            <item
                android:id="@+id/menu_private"
                android:icon="@drawable/ic_lock_outline_black_24dp"
                android:title="@string/visibility_private"/>
            <item
                android:id="@+id/menu_direct"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/visibility_direct"/>
</menu>