<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg_toolbar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/timeline_bg">

        <RelativeLayout
            android:id="@+id/layout_content_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/content_warning_textinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <EditText
                    android:id="@+id/content_warning_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_content_warning"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_content_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_content_header"
            android:layout_above="@+id/layout_content_footer">

            <EditText
                android:id="@+id/katsu_content_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:hint="@string/hint_content_body" />

            <requestFocus/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/layout_content_footer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/attach_image_1"
                android:layout_width="@dimen/katsu_image_width"
                android:layout_height="@dimen/katsu_image_height"
                android:background="@drawable/ic_camera_alt_black_24px"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/attach_image_2"
                android:layout_width="@dimen/katsu_image_width"
                android:layout_height="@dimen/katsu_image_height"
                android:layout_alignTop="@+id/attach_image_1"
                android:layout_toEndOf="@+id/attach_image_1"
                android:background="@drawable/ic_camera_alt_black_24px"
                android:backgroundTint="@android:color/darker_gray"/>

            <ImageView
                android:id="@+id/attach_image_3"
                android:layout_width="@dimen/katsu_image_width"
                android:layout_height="@dimen/katsu_image_height"
                android:layout_alignTop="@+id/attach_image_1"
                android:layout_toEndOf="@+id/attach_image_2"
                android:background="@drawable/ic_camera_alt_black_24px"
                android:backgroundTint="@android:color/darker_gray"/>

            <ImageView
                android:id="@+id/attach_image_4"
                android:layout_width="@dimen/katsu_image_width"
                android:layout_height="@dimen/katsu_image_height"
                android:layout_alignTop="@+id/attach_image_1"
                android:layout_toEndOf="@+id/attach_image_3"
                android:background="@drawable/ic_camera_alt_black_24px"
                android:backgroundTint="@android:color/darker_gray"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_content_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/label_content_warning"
                android:layout_alignBottom="@+id/label_content_warning"
                android:layout_toStartOf="@+id/label_content_warning" />

            <TextView
                android:id="@+id/label_content_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_content_warning"
                android:layout_alignBaseline="@+id/button_katsu"
                android:layout_alignBottom="@+id/button_katsu"
                android:layout_toStartOf="@+id/button_katsu" />

            <Button
                android:id="@+id/button_katsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:enabled="false"
                android:text="@string/button_katsu"
                android:layout_marginLeft="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>





    </RelativeLayout>

</RelativeLayout>